# elm-format

./: Shakefile.hs  elm-format.cabal  stack.yaml
elm-refactor/: CHANGELOG.md  LICENSE  README.md  elm-refactor.cabal
parser/src/AST/: Annotated.hs  Declaration.hs  Expression.hs  Json.hs  Module.hs  Pattern.hs  V0_16.hs  Variable.hs
parser/src/Parse/: Common.hs  Declaration.hs  Expression.hs  Helpers.hs  Module.hs  Parse.hs  Pattern.hs  Type.hs
src/AST/: MapExpr.hs
src/ElmFormat/: ImportInfo.hs  Mapping.hs  Upgrade_0_19.hs
src/ElmFormat/Render/: Box.hs
tests/ElmFormat/: ImportInfoTest.hs  Upgrade_0_19Test.hs
tests/Parse/: ExpressionTest.hs  PatternTest.hs
tests/Test/: Generators.hs
tests/test-files/elm-refactor/Elm-0.19/: UpgradeDefinitionSyntax.elm  UpgradeDefinitionSyntax.output.elm  UpgradeDefinitionSyntax.upgrade_elm
tests/test-files/good/Elm-0.18/AllSyntax/: Expressions.json  Module.json
tests/test-files/good/Elm-0.19/AllSyntax/: Expressions.elm
